--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -70,7 +70,7 @@
     4) ¿Qué método HTTP se debe utilizar al enviar un formulario HTML, por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? ¿Por qué?
     Probablemente post, en mi investigación constantemente es mencionado como un método seguro.
     5) ¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un URL?
-    x
+    El método Get
     6) Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error?
     Es uno de los estatus que un servidor puede arrojar, significa que la respuesta es exitosa (Hypertext Transfer Protocol (HTTP) Status Code Registry, s. f.).
     7) ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 404? ¿Por qué?
@@ -82,6 +82,14 @@
     Algunos ejemplos de atributos desaprobados son applet, dir y isindex (Tags y atributos desaprobados en HTML - TODO HTML, s. f.)
     10) ¿Cuáles son las diferencias principales entre HTML 4 y HTML5?
     HTML5 tiene nuevas etiquetas, nuevo sytnax, es más fácil de utilizar y no utiliza muchas etiquetas desaprobadas (Difference between HTML and HTML5 - javatpoint, s. f.)
-    11) 
+    11) ¿Qué componentes de estructura y estilo tiene una tabla?
+    En su estructura se encuentra table que englobará todo, tr que definirá las filas, td que definirá las celdas, th se utiliza para definir las celdas de encabezado. 
+    En cuanto estilo se tiene los clásicos widht, height, border además de estilos específicos de tabal como el cellspacing o el cellpading  (W3Schools, s.f.).
+    12) ¿Cuáles son los principales controles de una forma HTML5?
+    Input, textarea, checkbox, radio, button y datalist.  (W3Schools, s.f.)
+    13) ¿Qué tan compatible es mi navegador? 
+    Muy compatible, uso Chrome 109 en macOS Catalina 10.15 y tiene un puntaje de 525 puntos de 555.
+    14) ¿Cuál es el ciclo de vida de los sistemas de información?
+    El análisis de requisitos, el diseño, la implementación, las pruebas, despliegue y el mantenimiento. Eso sugiere el método en cascada.
 </body>
 </html>
