--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -59,7 +59,7 @@
           </footer>
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    Preguntas
+    <!-- Preguntas
     1) ¿Cuál es la diferencia entre Internet y la World Wide Web? 
     El internet es la red de conexión entre computadoras, en contraste la WWW es la coleción de páginas web. (BBC News Mundo, 2019)
     2) ¿Cuáles son las partes de un URL?
@@ -90,6 +90,6 @@
     13) ¿Qué tan compatible es mi navegador? 
     Muy compatible, uso Chrome 109 en macOS Catalina 10.15 y tiene un puntaje de 525 puntos de 555.
     14) ¿Cuál es el ciclo de vida de los sistemas de información?
-    El análisis de requisitos, el diseño, la implementación, las pruebas, despliegue y el mantenimiento. Eso sugiere el método en cascada.
+    El análisis de requisitos, el diseño, la implementación, las pruebas, despliegue y el mantenimiento. Eso sugiere el método en cascada. -->
 </body>
 </html>
